# jake

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  jakefile.toml  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: docs.yaml  test.yaml
docs/: index.html
docs/css/: styles.css  styles.reference.css
reference/: go.mod  main.go  template.html
reference/contents/: features.md  jakefile_reference.md  reference.md
scripts/: version_bump.py
src/: env_vars.rs  load.rs  main.rs  models.rs
testfiles/: deps.toml  jakefile.toml  withdefault.toml
