[package]
name = "jake"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/AstraBert/jake"
description = "Make-like task executor for Unix OS."
keywords = ["make", "task-execution", "automation", "cli"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
toml = { version = "1.0.1", features = ["preserve_order"] }
